--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@scalekit-sdk/node": "^2.1.9",
+    "@types/axios": "^0.9.36",
     "@types/multer": "^2.0.0",
+    "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
