--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.22.0",
     "@scalekit-sdk/node": "^2.1.9",
     "@types/axios": "^0.9.36",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
@@ -24,6 +25,7 @@
     "devdad-express-utils": "^1.8.2",
     "dotenv": "^17.2.3",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "openai": "^6.16.0",
     "zod": "^4.3.5"
